--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,13 @@
 version: 2 # use CircleCI 2.0
+executorType: machine
 jobs: # a collection of steps
   build:
     environment:
       # Configure the JVM and Gradle to avoid OOM errors
       _JAVA_OPTIONS: "-Xmx3g"
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
-    docker: # run the steps with Docker
-      - image: circleci/openjdk:11.0.6-jdk-stretch # ...with this image as the primary container; this is where all `steps` will run
+    machine:
+      image: ubuntu-1604:201903-01
     steps: # a collection of executable commands
       - checkout # check out source code to working directory
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
