--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs: # a collection of steps
     machine:
       image: ubuntu-1604:201903-01
     steps: # a collection of executable commands
-      - run: sudo upt-get update
+      - run: sudo apt-get update
       - run: sudo apt-get -y install openjdk-11-jdk
       - run: update-java-alternatives --set java-1.11.0-openjdk-amd64
       - checkout # check out source code to working directory
