--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs: # a collection of steps
     steps: # a collection of executable commands
       - run: sudo apt-get update
       - run: sudo apt-get -y install openjdk-11-jdk
-      - run: update-java-alternatives --set java-1.11.0-openjdk-amd64
+      - run: sudo update-java-alternatives --set java-1.11.0-openjdk-amd64
       - checkout # check out source code to working directory
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
       - restore_cache:
