swagger still in progress added some more tests

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
 }
 
 sourceSets {
@@ -49,6 +50,8 @@ dependencies {
     implementation "org.springframework.data:spring-data-envers"
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.modelmapper:modelmapper:2.3.5'
+    implementation 'io.springfox:springfox-swagger2:3.0.0-SNAPSHOT'
+    implementation 'io.springfox:springfox-data-rest:3.0.0-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
