--- a/src/main/resources/application-loc.yml
+++ b/src/main/resources/application-loc.yml
@@ -16,3 +16,6 @@ spring:
     url: jdbc:postgresql://localhost:5432/customer
     username: postgres
     password: 8yR13
+    hikari:
+      minimum-idle: 3
+      maximum-pool-size: 10
