--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ repositories {
     maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
 }
 
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE'
+    }
+}
+
 sourceSets {
     'integration-test' {
         java {
@@ -48,6 +54,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "org.springframework.data:spring-data-envers"
+    implementation 'org.springframework.cloud:spring-cloud-starter-consul-config'
+    implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.modelmapper:modelmapper:2.3.5'
     implementation 'io.springfox:springfox-swagger2:3.0.0-SNAPSHOT'
