--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,9 @@ jobs: # a collection of steps
           path: build/libs
       - run: ./gradlew test
       - run: ./gradlew integrationTest
+      - run:
+          name: Analyze on SonarCloud
+          command: ./gradlew sonarqube
       - save_cache:
           paths:
             - ~/.gradle/wrapper
@@ -41,3 +44,10 @@ jobs: # a collection of steps
       - store_artifacts:
           path: build/reports
           when: always
+
+workflows:
+  version: 2
+  main:
+    jobs:
+      - build:
+          context: SonarCloud
