--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'org.springframework.boot' version '2.2.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.sonarqube' version '2.8'
+    id 'jacoco'
     id 'java'
     id 'idea'
 }
@@ -89,3 +91,23 @@ task integrationTest(type: Test) {
 
 check.dependsOn integrationTest
 integrationTest.mustRunAfter test
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "everydocs_apigateway"
+        property "sonar.organization", "everydocs"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+        properties["sonar.tests"] += sourceSets.'integration-test'.allSource.srcDirs
+
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.enabled false
+    }
+    executionData(test, integrationTest)
+}
