--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ integrationTest.mustRunAfter test
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "everydocs_apigateway"
+        property "sonar.projectKey", "everydocs_customer"
         property "sonar.organization", "everydocs"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
