--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'idea'
 }
 
-group = 'com.everydocs'
+group = 'com.wheremydocs'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -94,12 +94,11 @@ integrationTest.mustRunAfter test
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "everydocs_customer"
-        property "sonar.organization", "everydocs"
+        property "sonar.projectKey", "wheremydocs_customer"
+        property "sonar.organization", "wheremydocs"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
         properties["sonar.tests"] += sourceSets.'integration-test'.allSource.srcDirs
-
     }
 }
 
