--- a/src/main/resources/application-loc.yml
+++ b/src/main/resources/application-loc.yml
@@ -17,6 +17,7 @@ spring:
 
       hibernate:
         show_sql: true
+        format_sql: true
 
   datasource:
     url: jdbc:postgresql://localhost:54322/wheremydocs_customer
