--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ springBoot {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -78,6 +79,7 @@ dependencies {
     }
 
     integrationTestImplementation 'org.springframework.boot:spring-boot-starter-test'
+    integrationTestImplementation 'org.springframework.security:spring-security-test'
     integrationTestImplementation "org.testcontainers:testcontainers:${testcontainersVersion}"
     integrationTestImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
 }
