--- a/src/integration-test/resources/application-test.yml
+++ b/src/integration-test/resources/application-test.yml
@@ -2,6 +2,13 @@ server:
   port: 8080
 
 spring:
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri:
+
   application:
     name: customer
 
