--- a/src/main/resources/application-loc.yml
+++ b/src/main/resources/application-loc.yml
@@ -8,6 +8,12 @@ logging:
     console: "%d{HH:mm:ss} %clr(%-5p) %clr(:){faint} %clr(%m){faint}%n"
 
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9080/auth/realms/wheremydocs
+
   jpa:
     properties:
       org:
