--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.1'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'org.springframework.boot' version '2.6.4'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "org.sonarqube" version "3.3"
     id 'jacoco'
     id 'java'
@@ -17,14 +17,12 @@ defaultTasks 'bootRun'
 repositories {
     mavenLocal()
     mavenCentral()
-    jcenter()
 }
 
 ext {
-    springCloudVersion = "2020.0.0"
-    swaggerVersion = '3.0.0'
-    testcontainersVersion = '1.15.1'
-    modelmapperVersion = '2.3.9'
+    springCloudVersion = "2021.0.1"
+    testcontainersVersion = '1.15.2'
+    modelmapperVersion = '3.1.0'
 }
 
 dependencyManagement {
@@ -67,9 +65,6 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-core'
     implementation "org.modelmapper:modelmapper:${modelmapperVersion}"
-
-    // Swagger
-    implementation "io.springfox:springfox-boot-starter:${swaggerVersion}"
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -117,4 +112,8 @@ jacocoTestReport {
         html.enabled false
     }
     executionData(test, integrationTest)
+}
+
+processIntegrationTestResources {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
